--- a/index7.html
+++ b/index7.html
@@ -412,7 +412,7 @@
                             <div class="position-absolute mobile_inner_part z-5">
                                 <img class="w-100 mobile_trading" src="./assets/images/webp/benifit-mobile-trading.webp"
                                     alt="trading-image" />
-                                <p class="mb-15 off-black3 text-center fw-bold lh_2lg fs_2md mt-4">
+                                <p class="mb-15 off-black3 mb-3 mb-lg-0 text-center fw-bold lh_2lg fs_2md mt-4">
                                     Al revolution!
                                 </p>
                                 <p class="fs_sm mw_224 fw-normal lh_2md text-center ff_opensans gray2">
@@ -444,7 +444,7 @@
                                                 </defs>
                                             </svg>
                                         </span>
-                                        <p class="text-white ff_opensans fs_md lh_lg fw-bold text-center">
+                                        <p class="text-white mb-0 ff_opensans fs_md lh_lg fw-bold text-center">
                                             Artificial <br />
                                             Intelligence Stocks
                                         </p>
@@ -469,7 +469,7 @@
                                                 </defs>
                                             </svg>
                                         </span>
-                                        <p class="text-white ff_opensans fs_md lh_lg fw-bold text-center">
+                                        <p class="text-white  ff_opensans fs_md lh_lg fw-bold text-center">
                                             AI Revolution!
                                         </p>
                                     </div>
@@ -501,7 +501,7 @@
                             </div>
                             <div class="col-lg-6 col-md-3 col-sm-6 ps_10 col-12">
                                 <div class="benifit_gradient mx-auto mx-md-0 mb-27 p_2">
-                                    <div class="benifit_card mx-auto mx-md-0  d-flex flex-column align-items-center">
+                                    <div class="benifit_card mx-auto mx-md-0  d-flex flex-column align-items-center justify-content-lg-center">
                                         <span class="icons_card"><svg width="37" height="37" viewBox="0 0 37 37"
                                                 fill="none" xmlns="http://www.w3.org/2000/svg">
                                                 <path
@@ -553,7 +553,7 @@
                                                 </defs>
                                             </svg>
                                         </span>
-                                        <p class="text-white ff_opensans fs_md lh_lg fw-bold text-center">
+                                        <p class="text-white ff_opensans mb-0 fs_md lh_lg fw-bold text-center">
                                             Artificial <br />
                                             Intelligence
                                         </p>
@@ -585,7 +585,7 @@
                     more effectively, enhancing their overall trading performance.
                 </p>
                 <div class="row align-items-center justify-content-center  pt-1">
-                    <div class="col-lg-6 col-sm-12 pe-md-4 d-flex flex-column justify-content-center align-items-center">
+                    <div class="col-lg-6 col-sm-12 pe-lg-4 d-flex flex-column justify-content-center align-items-center">
                         <div
                             class="understanding_card gap-3 me-lg-4 d-flex flex-column flex-lg-row align-items-center justify-content-center align-items-lg-start">
                             <img class="man_img" src="./assets/images/webp/understanding-man-1.webp" alt="man-img" />
@@ -596,7 +596,7 @@
                                     could potentially earn up to $40.</span>
                             </p>
                         </div>
-                        <div class="accounts_card me-lg-4">
+                        <div class="accounts_card mx-3 mx-sm-0 me-lg-4">
 <p class="ff_opensans fw-bold font-gradient fs_4md lh_xxl mb-md-3 mb-1 text-center text-md-start">Leveraged Accounts</p>
 <div class="d-flex justify-content-between align-items-center mb-10">
 <p class="fw-normal ff_opensans fs_xs gray-4e mb-0 lh_md">John invested</p>
@@ -627,7 +627,7 @@
                                     leveraging on potential gains.</span>
                             </p>
                         </div>
-                        <div class="accounts_card ">
+                        <div class="accounts_card mx-3 mx-sm-0 mx-md-2 mx-xl-0">
                             <p class="ff_opensans fw-bold font-gradient fs_4md lh_xxl mb-md-3 mb-1 text-center text-md-start">Non - Leveraged Accounts</p>
                             <div class="d-flex justify-content-between align-items-center mb-10">
                             <p class="fw-normal ff_opensans fs_xs gray-4e mb-0 lh_md">Mike invested</p>
@@ -641,7 +641,7 @@
                             <p class="fw-normal ff_opensans fs_xs gray-4e mb-0 lh_md">Buying Power</p>
                             <p class="fw-bold ff_opensans fs_xs black-45 mb-0 lh_md">$7500</p>
                             </div>
-                            <img class="w-100 mb-4" src="./assets/images/webp/trade-1.webp" alt="trade-img">
+                            <img class="w-100 mb-4" src="./assets/images/webp/trade-2.webp" alt="trade-img">
                             <div class="d-flex align-items-center italic trade_btn "> <p class="green-2d  bg-white ff_opensans fw-bold fs_lg lh_4xl mb-0">$1200</p> <p class="green-2d  bg-white ff_opensans  mb-0 fw-semibold lh_xsm fs_sm">Mike achieved returns</p></div>
                                                     </div>                    </div>
                 </div>
