--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
                 <div class="col-lg-6 col-sm-12 pe-lg-4 d-flex flex-column justify-content-center align-items-center">
                     <div
                         class="understanding_card gap-3 me-lg-4 d-flex flex-column flex-lg-row align-items-center justify-content-center align-items-lg-start">
-                        <img class="man_img" src="./assets/images/webp/understanding-man-1.webp" alt="man-img" />
+                        <img class="man_img" src="./assets/images/png/john-invested-img.png" alt="man-img" />
                         <p class="ff_opensans fw-bolder text-center mb-0 text-lg-start italic text-white lh_md fs_xs">
                             John invested
                             <span class="fw-normal style_normal">
@@ -376,7 +376,7 @@
                     class="col-lg-6 col-sm-12 ps-lg-4 d-flex flex-column pt-4 pt-lg-0 justify-content-center align-items-center">
                     <div
                         class="understanding_card  gap-3 d-flex flex-column  flex-lg-row align-items-center justify-content-center align-items-lg-start">
-                        <img class="man_img" src="./assets/images/webp/understanding-man-2.webp" alt="man-img" />
+                        <img class="man_img" src="./assets/images/png/mike-invested-img.png" alt="man-img" />
                         <p class="ff_opensans fw-bolder text-center text-lg-start italic text-white lh_md fs_xs">
                             Mike invested
                             <span class="fw-normal style_normal">
