--- a/index8.html
+++ b/index8.html
@@ -23,14 +23,14 @@
     <meta property="twitter:image" content="https://i.ibb.co/LzLxZsH/127-0-0-1-5500-index3-html.png" />
 </head>
 
-<body class="bg_body overflow_hidden">
+<body class="bg_body">
     <!-- preloader -->
-    <div id="preloder" class="min-vh-100 bg-black d-flex justify-content-center align-items-center  position-fixed top-0 start-0 w-100 z_15">
+    <!-- <div id="preloder" class="min-vh-100 bg-black d-flex justify-content-center align-items-center  position-fixed top-0 start-0 w-100 z_15">
         <div class="preloder text-white fs_2xl flex-column d-flex">
             <P class="fs_xl ff_opensans fw-bold text-white">Ai-<span class="text_white">Stocks</span></P>
             <div class="ciclre mx-auto"></div>
         </div>
-    </div>
+    </div> -->
     <div class="overflow-x-hidden">
         <!-- header section  -->
         <header class=" bg-hero-img position-relative mb-100 overflow-x-clip  z-1">
@@ -672,12 +672,12 @@
                     <h2 class="ff_opensans fw-bold fs_8xl text-white lh_7xl text-center mb-0">Frequently Asked
                         <span class="blueGraident textBg">Questions</span>
                     </h2>
-                    <div class="pt-4 pt-sm-5 mt_12">
+                    <div class="pt-4 mt-3">
                         <div class="accordion faqSection" id="accordionExample">
                             <div class="accordion-item">
                                 <h2 class="accordion-header">
                                     <button class="accordion-button ff_opensans fw-bold fs_xs lh-md gap-3 gap-lg-1" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                                        <span class="d-none d-sm-block">1. </span> Do I need trading experience to
+                                        <span class="d-none d-sm-flex gap-1">1. </span> Do I need trading experience to
                                         invest in AI
                                         Stocks?
                                     </button>
@@ -719,7 +719,7 @@
                             </div>
                             <div class="accordion-item">
                                 <h2 class="accordion-header">
-                                    <button class="accordion-button collapsed ff_opensans fw-bold fs_xs lh_md gap-lg-1" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                                    <button class="accordion-button collapsed ff_opensans fw-bold fs_xs lh_md  gap-2 gap-lg-1" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
                                         <span class="max_w_heading d-sm-flex gap-2"><span class="d-none d-sm-block">4.
                                             </span>
                                             How can i start using the trading platform?</span>
@@ -772,19 +772,19 @@
                                     <input id="Number" type="number" placeholder="Phone Number" class=" bg-gray ff_opensans fw-normal fs-xs lh_xsm place AiStockInputPhone w-100">
                                 </div>
                                 <p class="mb-0" id="errorNumber"></p>
-                                <button aria-label="signups" id="Submit" type="submit" class="mt-32 text-decoration-none w-100 ff_opensans text-black btnSignup fw-bold fs_xs lh_xsm">Sign
+                                <button aria-label="signups" id="Submit" type="submit" class="mt-32 text-decoration-none w-100 ff_opensans text-black common_btn fw-bold fs_xs lh_xsm">Sign
                                     Up</button>
                             </form>
                         </div>
                     </div>
                     <div class="col-12 col-lg-6">
                         <div class="d-flex justify-content-center align-items-center">
-
-                            <div class="position-relative z-1">
-                                <div class="imgAi"><img class="w-100 " src="./assets/images/webp/aws.webp" alt="img">
+                            <div class="position-relative brandGroupwidth z-1">
+                                <img class="w-100" src="./assets/images/webp/groupbrandlogo.webp" alt="web">
+                                <div class="imgAi imgPostion1"><img class="w-100 " src="./assets/images/webp/aws.webp" alt="img">
                                 </div>
-                                <div class="imgAi"><img class="w-100 " src="./assets/images/webp/mainImg.webp" alt="img"></div>
-                                <div class="imgAi"><img class="w-100 " src="./assets/images/webp/arusta.webp" alt="img">
+                                <div class="imgAi imgPostion5"><img class="w-100 " src="./assets/images/webp/mainImg.webp" alt="img"></div>
+                                <div class="imgAi imgPostion7"><img class="w-100 " src="./assets/images/webp/arusta.webp" alt="img">
                                 </div>
                                 <div class="imgAi imgPostion2"><img class="w-100" src="./assets/images/webp/palantir.webp" alt="img"></div>
                                 <div class="imgAi imgPostion"><img class="w-100" src="./assets/images/webp/iconImg.webp" alt="img"></div>
@@ -804,7 +804,7 @@
                 <div class="d-flex justify-content-center justify-content-sm-between flex-column flex-sm-row flex-wrap align-items-center mb-0">
                     <div class="maxWidth">
                         <p class="ff_opensans fs_xl fw-bold white lh_6xxl mb-0 text-center text-sm-start">AI STOCKS</p>
-                        <p class="ff_opensans fs_xs fw-normal cc-gray lh_xxl mb-0 pt-3 ">
+                        <p class="ff_opensans fs_xs fw-normal cc-gray lh_xxl mb-0 pt-3 text-center text-sm-start ">
                             Empowering Your Financial Future
                             <span class="d-sm-block">with Intelligent Investments</span>
                         </p>
@@ -861,9 +861,9 @@
             <span class="borderTop d-block mt-lg-4"></span>
             <div class=" FooterBottomPadding">
                 <div class="container">
-                    <div class="d-flex justify-content-center justify-content-sm-between flex-wrap align-items-center">
-                        <div class="ff_opensans fw-normal fs_xs lh_xxl cc-gray mb-0  d-none d-sm-block">
-                            <a href="#" class="ff_opensans fw-normal fs_xs lh_xxl cc-gray"> Privacy Policy </a><span>|</span> <a href="#" class="cc-gray ff_opensans fw-normal fs_xs lh_xxl">Conditions</a>
+                    <div class="d-flex justify-content-center justify-content-sm-between flex-column flex-sm-row flex-wrap align-items-center">
+                        <div class="ff_opensans fw-normal fs_xs lh_xxl cc-gray mb-0">
+                            <a href="#" class="ff_opensans fw-normal fs_xs lh_xxl hoverText cc-gray"> Privacy Policy </a><span>|</span> <a href="#" class="cc-gray hoverText ff_opensans fw-normal fs_xs lh_xxl">Conditions</a>
                         </div>
                         <p class="ff_opensans fw-normal fs_xs lh_xxl cc-gray mb-0 pt-2 pt-sm-0 ">
                             <span class="d-none d-sm-block"></span> Report Abuse | Copyright@<span id="currentYear"></span>
