--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
 
 <body class="bg_body">
     <!-- preloader -->
-    <!-- <div id="preloder"
+    <div id="preloder"
         class="min-vh-100 bg-black d-flex justify-content-center align-items-center  position-fixed top-0 start-0 w-100 z_15">
         <div class="preloder text-white fs_2xl flex-column d-flex">
             <P class="fs_xl ff_opensans fw-bold text-white">Ai-<span class="text_white">Stocks</span></P>
             <div class="ciclre mx-auto"></div>
         </div>
-    </div> -->
+    </div>
     <div class="overflow-x-hidden">
         <!-- header -->
         <header class=" bg-hero-img position-relative mb-xl-100 mb-md-64 mb-45 overflow-x-clip  z-1">
