comment section delete

--- a/index3.html
+++ b/index3.html
@@ -202,100 +202,9 @@
         <span class=" ellipes4headerright-top d-none d-sm-block"></span>
         <span class=" ellipes5headerright-bottom d-none d-lg-block"></span>
     </header>
-    <!-- silder by  keyframes  -->
-    <!-- <section class="position-relative d-flex gap-20 overflow-x-clip mx-auto mb-5">
-        <div class="d-flex align-items-center gap-20 brand_slider_parent position-relative  start-0 top-0 h-100">
-            <div class="man-profile-card  d-flex  align-items-center  gap-3">
-                <span><img src="./assets/images/svg/girl.svg" alt="girl"></span>
-                <div>
-                    <h2 class='ff_opensans fw-bold mb-2  fs_md lh_2lg text-white '>Esther Howard</h2>
-                    <p class=' mb-0 pb_2 ff_opensans fw-normal text-white  fs_xs lh_xsm'>Profit: <span
-                            class='c-light-green'>$2,208</span></p>
-                    <p class=' mb-0 ff_opensans fw-normal text-white  fs_xs lh_xsm'>Current Balance: $2,361</p>
-                </div>
-            </div>
-            <div class="man-profile-card  d-flex  align-items-center  gap-3">
-                <span>
-                    <img src="./assets/images/svg/lognhariman.svg" alt="longhairman">
-                </span>
-                <div>
-                    <h2 class='ff_opensans fw-bold mb-2  fs_md lh_2lg text-white '>Theresa Webb</h2>
-                    <p class=' mb-0 pb_2 ff_opensans fw-normal text-white  fs_xs lh_xsm'>Profit: <span
-                            class='c-light-green'>$3,302</span></p>
-                    <p class=' mb-0 ff_opensans fw-normal text-white  fs_xs lh_xsm'>Current Balance: $1,625</p>
-                </div>
-            </div>
-            <div class="man-profile-card  d-flex  align-items-center  gap-3">
-                <span>
-                    <img src="./assets/images/svg/orangetshirtman.svg" alt="orangetshirtman">
-                </span>
-                <div>
-                    <h2 class='ff_opensans fw-bold mb-2  fs_md lh_2lg text-white '>Devon Lane</h2>
-                    <p class=' mb-0 pb_2 ff_opensans fw-normal text-white  fs_xs lh_xsm'>Profit: <span
-                            class='c-light-green'>$5,265</span></p>
-                    <p class=' mb-0 ff_opensans fw-normal text-white  fs_xs lh_xsm'>Current Balance: $3,489</p>
-                </div>
-            </div>
-            <div class="man-profile-card  d-flex  align-items-center  gap-3">
-                <span>
-                    <img src="./assets/images/svg/girlface.svg" alt="girlface">
-                </span>
-                <div>
-                    <h2 class='ff_opensans fw-bold mb-2  fs_md lh_2lg text-white '>Ralph Edwards</h2>
-                    <p class=' mb-0 pb_2 ff_opensans fw-normal text-white  fs_xs lh_xsm'>Profit: <span
-                            class='c-light-green'>$4,654</span></p>
-                    <p class=' mb-0 ff_opensans fw-normal text-white  fs_xs lh_xsm'>Current Balance: $2,584</p>
-                </div>
-            </div>
-        </div>
-        <div class="d-flex align-items-center gap-20 brand_slider_parent2 position-absolute left-0 top-0 h-100">
-            <div class="man-profile-card  d-flex  align-items-center  gap-3">
-                <span><img src="./assets/images/svg/girl.svg" alt="girl"></span>
-                <div>
-                    <h2 class='ff_opensans fw-bold mb-2  fs_md lh_2lg text-white '>Esther Howard</h2>
-                    <p class=' mb-0 pb_2 ff_opensans fw-normal text-white  fs_xs lh_xsm'>Profit: <span
-                            class='c-light-green'>$2,208</span></p>
-                    <p class=' mb-0 ff_opensans fw-normal text-white  fs_xs lh_xsm'>Current Balance: $2,361</p>
-                </div>
-            </div>
-            <div class="man-profile-card  d-flex  align-items-center  gap-3">
-                <span>
-                    <img src="./assets/images/svg/lognhariman.svg" alt="longhairman">
-                </span>
-                <div>
-                    <h2 class='ff_opensans fw-bold mb-2  fs_md lh_2lg text-white '>Theresa Webb</h2>
-                    <p class=' mb-0 pb_2 ff_opensans fw-normal text-white  fs_xs lh_xsm'>Profit: <span
-                            class='c-light-green'>$3,302</span></p>
-                    <p class=' mb-0 ff_opensans fw-normal text-white  fs_xs lh_xsm'>Current Balance: $1,625</p>
-                </div>
-            </div>
-            <div class="man-profile-card  d-flex  align-items-center  gap-3">
-                <span>
-                    <img src="./assets/images/svg/orangetshirtman.svg" alt="orangetshirtman">
-                </span>
-                <div>
-                    <h2 class='ff_opensans fw-bold mb-2  fs_md lh_2lg text-white '>Devon Lane</h2>
-                    <p class=' mb-0 pb_2 ff_opensans fw-normal text-white  fs_xs lh_xsm'>Profit: <span
-                            class='c-light-green'>$5,265</span></p>
-                    <p class=' mb-0 ff_opensans fw-normal text-white  fs_xs lh_xsm'>Current Balance: $3,489</p>
-                </div>
-            </div>
-            <div class="man-profile-card  d-flex  align-items-center  gap-3">
-                <span>
-                    <img src="./assets/images/svg/girlface.svg" alt="girlface">
-                </span>
-                <div>
-                    <h2 class='ff_opensans fw-bold mb-2  fs_md lh_2lg text-white '>Ralph Edwards</h2>
-                    <p class=' mb-0 pb_2 ff_opensans fw-normal text-white  fs_xs lh_xsm'>Profit: <span
-                            class='c-light-green'>$4,654</span></p>
-                    <p class=' mb-0 ff_opensans fw-normal text-white  fs_xs lh_xsm'>Current Balance: $2,584</p>
-                </div>
-            </div>
-        </div>
-    </section> -->
+   <!-- <slider - key frame> -->
     <div class="overflow-hidden mb-0">
         <div class="d-flex align-items-center logo_gap slide_container">
-
             <div class="logo_size">
                 <div class="man-profile-card  d-flex  align-items-center  gap-3">
                     <span><img src="./assets/images/svg/girl.svg" alt="girl"></span>
