--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
         </header>
         <!-- silder by  keyframes  -->
         <div class="overflow-hidden mb-0">
-            <div class="d-flex align-items-center logo_gap slide_container">
+            <div class="d-flex py_2 align-items-center logo_gap slide_container">
 
                 <div class="logo_size">
                     <div class="man-profile-card  d-flex  align-items-center  gap-3">
