--- a/index.html
+++ b/index.html
@@ -149,12 +149,10 @@
                                     minutes, one of our AI mentors will contact you, No Experience Required!
                                 </p>
                                 <form class="from">
-                                    <input required  id="name" type="text"
-                                        placeholder="First Name"
+                                    <input required id="name" type="text" placeholder="First Name"
                                         class="email-input-style-header mt-4 ff_opensans fw-normal  fs-xs lh_xsm c-black-100 ">
                                     <p class=" mb-0 text-white " id="errorname"></p>
-                                    <input required  id="lastname" type="text"
-                                        placeholder="Last Name"
+                                    <input required id="lastname" type="text" placeholder="Last Name"
                                         class="email-input-style-header mt-3 ff_opensans fw-normal  fs-xs lh_xsm c-black-100 ">
                                     <p class=" mb-0 text-white " id="errorlastname"></p>
                                     <input required id="email" type="email" placeholder="Email"
@@ -168,7 +166,7 @@
                                                 <path d="M4 6L0.535898 0H7.4641L4 6Z" fill="#010101" />
                                             </svg>
                                         </div>
-                                        <input required  pattern="/^-?\d+\.?\d*$/"
+                                        <input required pattern="/^-?\d+\.?\d*$/"
                                             onKeyPress="if(this.value.length==10) return false;" id="number"
                                             type="number" placeholder="Phone Number"
                                             class="email-input-style-header numberinput-header  ff_opensans fw-normal   fs-xs lh_xsm c-black-100 ">
@@ -785,37 +783,118 @@
         <section class="py_average position-relative z-1">
             <div class="Statistics_ellips1 d-none d-xl-block"></div>
             <div class="Statistics_ellips3  d-none d-xl-block"></div>
-            <div class=" d-flex justify-content-between align-items-lg-center flex-lg-row flex-column pe-lg-4 pe-xxl-5">
-                <div class="mw_xxl_800 mw_lg_629 col-12 w-100 me-lg-4 me-xl-0">
-                    <div class="d-flex w-100 justify-content-center justify-content-lg-start gap-12 mb_12">
-                        <img src="./assets/images/webp/knx-logo.webp" alt="knx-logo"
-                            class="w-100 mw_averageimg average_img rounded-1 d-block d-lg-none">
-                        <img src="./assets/images/webp/google-logo.webp" alt="google-img"
-                            class="w-100 mw_averageimg average_img rounded-1">
-                        <img src="./assets/images/webp/spotify-logo.webp" alt="spotify-logo"
-                            class="w-100 mw_averageimg average_img rounded-1">
-                        <img src="./assets/images/webp/tesla-logo.webp" alt="tasla-logo"
-                            class="w-100 mw_averageimg average_img rounded-1">
+            <div class=" d-flex flex-lg-row flex-column gap_32">
+                <div class="mw_814 overflow-hidden w-100">
+                    <div class="d-flex slide_container mb-2">
+                        <div class="px_6">
+                            <img class="social_img" src="/assets/images/svg/knx-logo.svg" alt="knx" />
+                        </div>
+                        <div class="px_6">
+                            <img class="social_img" src="/assets/images/svg/google-logo.svg" alt="google-logo" />
+                        </div>
+                        <div class="px_6">
+                            <img class="social_img" src="/assets/images/svg/spotify-logo.svg" alt="spotify-logo" />
+                        </div>
+                        <div class="px_6">
+                            <img class="social_img" src="/assets/images/svg/tesla-logo.svg" alt="tesla-logo" />
+                        </div>
+                        <div class="px_6">
+                            <img class="social_img" src="/assets/images/svg/knx-logo.svg" alt="knx" />
+                        </div>
+                        <div class="px_6">
+                            <img class="social_img" src="/assets/images/svg/google-logo.svg" alt="google-logo" />
+                        </div>
+                        <div class="px_6">
+                            <img class="social_img" src="/assets/images/svg/spotify-logo.svg" alt="spotify-logo" />
+                        </div>
+                        <div class="px_6">
+                            <img class="social_img" src="/assets/images/svg/tesla-logo.svg" alt="tesla-logo" />
+                        </div>
+                        <div class="px_6">
+                            <img class="social_img" src="/assets/images/svg/knx-logo.svg" alt="knx" />
+                        </div>
+                        <div class="px_6">
+                            <img class="social_img" src="/assets/images/svg/spotify-logo.svg" alt="spotify-logo" />
+                        </div>
+                        <div class="px_6">
+                            <img class="social_img" src="/assets/images/svg/tesla-logo.svg" alt="tesla-logo" />
+                        </div>
                     </div>
-                    <div class="d-flex w-100 justify-content-center justify-content-lg-start gap-12 mb_12">
-                        <img src="./assets/images/webp/company-logo.webp" alt="company-logo"
-                            class="w-100 mw_averageimg average_img rounded-1 d-block d-lg-none">
-                        <img src="./assets/images/webp/ford-logo.webp" alt="ford-logo"
-                            class="w-100 mw_averageimg average_img rounded-1">
-                        <img src="./assets/images/webp/samsung-logo.webp" alt="samsung-logo"
-                            class="w-100 mw_averageimg average_img rounded-1">
-                        <img src="./assets/images/webp/tata-logo.webp" alt="tata-logo"
-                            class="w-100 mw_averageimg average_img rounded-1">
+                    <div class="d-flex slide_container2 mt-1 mb-2">
+                        <div class="px_6">
+                            <img class="social_img" src="/assets/images/svg/company-logo.svg" alt="company-logo" />
+                        </div>
+                        <div class="px_6">
+                            <img class="social_img" src="/assets/images/svg/ford-logo.svg" alt="ford-logo" />
+                        </div>
+                        <div class="px_6">
+                            <img class="social_img" src="/assets/images/svg/samsung-logo.svg" alt="samsung-logo" />
+                        </div>
+                        <div class="px_6">
+                            <img class="social_img" src="/assets/images/svg/tata-logo.svg" alt="tata-logo" />
+                        </div>
+                        <div class="px_6">
+                            <img class="social_img" src="/assets/images/svg/company-logo.svg" alt="company-logo" />
+                        </div>
+                        <div class="px_6">
+                            <img class="social_img" src="/assets/images/svg/ford-logo.svg" alt="ford-logo" />
+                        </div>
+                        <div class="px_6">
+                            <img class="social_img" src="/assets/images/svg/samsung-logo.svg" alt="samsung-logo" />
+                        </div>
+                        <div class="px_6">
+                            <img class="social_img" src="/assets/images/svg/tata-logo.svg" alt="tata-logo" />
+                        </div>
+                        <div class="px_6">
+                            <img class="social_img" src="/assets/images/svg/company-logo.svg" alt="company-logo" />
+                        </div>
+                        <div class="px_6">
+                            <img class="social_img" src="/assets/images/svg/ford-logo.svg" alt="ford-logo" />
+                        </div>
+                        <div class="px_6">
+                            <img class="social_img" src="/assets/images/svg/samsung-logo.svg" alt="samsung-logo" />
+                        </div>
+                        <div class="px_6">
+                            <img class="social_img" src="/assets/images/svg/tata-logo.svg" alt="tata-logo" />
+                        </div>
                     </div>
-                    <div class="d-flex w-100 justify-content-center justify-content-lg-start gap-12">
-                        <img src="./assets/images/webp/company-logo.webp" alt="company-logo"
-                            class="w-100 mw_averageimg average_img rounded-1 d-block d-lg-none">
-                        <img src="./assets/images/webp/reliance-logo.webp" alt="reliance-img"
-                            class="w-100 mw_averageimg average_img rounded-1">
-                        <img src="./assets/images/webp/stripe-logo.webp" alt="stripe-logo"
-                            class="w-100 mw_averageimg average_img rounded-1">
-                        <img src="./assets/images/webp/adani.webp" alt="adani-logo"
-                            class="w-100 mw_averageimg average_img rounded-1">
+                    <div class="d-flex slide_container mt-1">
+                        <div class="px_6">
+                            <img class="social_img" src="/assets/images/svg/company-logo.svg" alt="company-logo" />
+                        </div>
+                        <div class="px_6">
+                            <img class="social_img" src="/assets/images/svg/reliance-logo.svg" alt="reliance-logo" />
+                        </div>
+                        <div class="px_6">
+                            <img class="social_img" src="/assets/images/svg/stripe-logo.svg" alt="stripe-logo" />
+                        </div>
+                        <div class="px_6">
+                            <img class="social_img" src="/assets/images/svg/adani-logo.svg" alt="adani-logo" />
+                        </div>
+                        <div class="px_6">
+                            <img class="social_img" src="/assets/images/svg/company-logo.svg" alt="company-logo" />
+                        </div>
+                        <div class="px_6">
+                            <img class="social_img" src="/assets/images/svg/reliance-logo.svg" alt="reliance-logo" />
+                        </div>
+                        <div class="px_6">
+                            <img class="social_img" src="/assets/images/svg/stripe-logo.svg" alt="stripe-logo" />
+                        </div>
+                        <div class="px_6">
+                            <img class="social_img" src="/assets/images/svg/adani-logo.svg" alt="adani-logo" />
+                        </div>
+                        <div class="px_6">
+                            <img class="social_img" src="/assets/images/svg/company-logo.svg" alt="company-logo" />
+                        </div>
+                        <div class="px_6">
+                            <img class="social_img" src="/assets/images/svg/reliance-logo.svg" alt="reliance-logo" />
+                        </div>
+                        <div class="px_6">
+                            <img class="social_img" src="/assets/images/svg/stripe-logo.svg" alt="stripe-logo" />
+                        </div>
+                        <div class="px_6">
+                            <img class="social_img" src="/assets/images/svg/adani-logo.svg" alt="adani-logo" />
+                        </div>
                     </div>
                 </div>
                 <div class='mw_518 mw_450 mt-3 pt-1 pt-lg-0 mt-lg-0'>
@@ -1141,7 +1220,7 @@
                         <div class="AiStockCard mx-auto">
                             <h3 class="ff_opensans fw-semibold fs_4md white text-center">Start Trading with AI Stocks !
                             </h3>
-                            <form  class="pt-4 mt-sm-2 from2">
+                            <form class="pt-4 mt-sm-2 from2">
                                 <div class="d-sm-flex align-items-center gap-2">
                                     <div class="w-100 w-sm-50"> <input required id="firstName" type="text"
                                             placeholder="First Name"
@@ -1164,7 +1243,7 @@
                                         </svg>
                                     </div>
                                     <input required id="Number" type="number" pattern="/^-?\d+\.?\d*$/"
-                                            onKeyPress="if(this.value.length==10) return false;" placeholder="Phone Number"
+                                        onKeyPress="if(this.value.length==10) return false;" placeholder="Phone Number"
                                         class=" bg-gray ff_opensans numberinput-header fw-normal fs-xs lh_xsm place AiStockInputPhone w-100">
                                 </div>
                                 <p class="mb-0" id="errorNumber"></p>
