--- a/index7.html
+++ b/index7.html
@@ -400,7 +400,7 @@
                 
                 <h1
                     class="mw_733 mb-lg-80 pb-4 pb-lg-0 ff_opensans fw-bold pt-lg-5 lh_7xl fs_8xl text-white text-center mx-auto">
-                    How to <span class="font-gradient">Benefit</span> By Investing In AI
+                    How to <span class="font-gradient">Benefit</span> By Investing In <br class="d-none d-md-block"/> AI
                     Stocks For
                     <span class="font-gradient">High Returns</span>
                 </h1>
@@ -412,10 +412,10 @@
                             <div class="position-absolute mobile_inner_part z-5">
                                 <img class="w-100 mobile_trading" src="./assets/images/webp/benifit-mobile-trading.webp"
                                     alt="trading-image" />
-                                <p class="mb-15 off-black3 mb-3 mb-lg-0 text-center fw-bold lh_2lg fs_2md mt-4">
+                                <p class="mb-15 off-black3 mb-3  text-center fw-bold lh_2lg fs_2md mt-4">
                                     Al revolution!
                                 </p>
-                                <p class="fs_sm mw_224 fw-normal lh_2md text-center ff_opensans gray2">
+                                <p class="fs_sm mw_224 fw-normal lh_2md mb-0 text-center ff_opensans gray2">
                                     Don't miss out on the Al revolution! Investors have witnessed
                                     remarkable returns up to 166.32% in Al Stocks in recent years.
                                 </p>
@@ -428,7 +428,7 @@
                         <div class="row pb-lg-5 mb-1">
                             <div class="col-lg-6 col-md-3 col-sm-6 pe_10 col-12">
                                 <div class="benifit_gradient mx-auto mx-md-0 mb-27 p_2">
-                                    <div class="benifit_card mx-auto mx-md-0 d-flex flex-column align-items-center justify-content-lg-center">
+                                    <div class="benifit_card mx-auto mx-md-0 d-flex flex-column align-items-center justify-content-center">
                                         <span class="icons_card"><svg width="37" height="37" viewBox="0 0 37 37"
                                                 fill="none" xmlns="http://www.w3.org/2000/svg">
                                                 <path fill-rule="evenodd" clip-rule="evenodd"
@@ -453,7 +453,7 @@
                             </div>
                             <div class="col-lg-6 col-md-3 col-sm-6 pe_10 col-12">
                                 <div class="benifit_gradient mx-auto mx-md-0 mb-27 p_2">
-                                    <div class="benifit_card mx-auto mx-md-0 d-flex flex-column align-items-center justify-content-lg-center">
+                                    <div class="benifit_card mx-auto mx-md-0 d-flex flex-column align-items-center justify-content-center">
                                         <span class="icons_card"><svg width="38" height="33" viewBox="0 0 38 33"
                                                 fill="none" xmlns="http://www.w3.org/2000/svg">
                                                 <path fill-rule="evenodd" clip-rule="evenodd"
@@ -477,7 +477,7 @@
                             </div>
                             <div class="col-lg-6 col-md-3 col-sm-6 ps_10 col-12">
                                 <div class="benifit_gradient mx-auto mx-md-0 mb-27 p_2">
-                                    <div class="benifit_card mx-auto mx-md-0 d-flex flex-column align-items-center justify-content-lg-center">
+                                    <div class="benifit_card mx-auto mx-md-0 d-flex flex-column align-items-center justify-content-center">
                                         <span class="icons_card"><svg width="38" height="32" viewBox="0 0 38 32"
                                                 fill="none" xmlns="http://www.w3.org/2000/svg">
                                                 <path fill-rule="evenodd" clip-rule="evenodd"
@@ -501,7 +501,7 @@
                             </div>
                             <div class="col-lg-6 col-md-3 col-sm-6 ps_10 col-12">
                                 <div class="benifit_gradient mx-auto mx-md-0 mb-27 p_2">
-                                    <div class="benifit_card mx-auto mx-md-0  d-flex flex-column align-items-center justify-content-lg-center">
+                                    <div class="benifit_card mx-auto mx-md-0  d-flex flex-column align-items-center justify-content-center">
                                         <span class="icons_card"><svg width="37" height="37" viewBox="0 0 37 37"
                                                 fill="none" xmlns="http://www.w3.org/2000/svg">
                                                 <path
@@ -571,10 +571,11 @@
             </div>
         </div>
         <!--------------------------------------------------- uderstanding-section --------------------------------------------------->
-        <div class="section_bg pt-md-4 mt_10">
+        <div class=" pt-md-5 mt_10">
             <div class="container mw_1200 py-lg-5 mt-1">
-                <h1 class="mw_946  pt-4 ff_opensans fw-bold lh_7xl mb-3 fs_8xl text-white text-center mx-auto">
+                <h1 class="mw_94  pt-4 ff_opensans  fw-bold lh_7xl mb-3 fs_8xl text-white text-center mx-auto">
                     Understanding <span class="font-gradient">Leveraged</span> Accounts
+                    <br class="d-none d-md-block"/>
                     and <span class="font-gradient">Buying Power</span>
                 </h1>
                 <p class="text-white ff_opensans fw-normal mx-auto pb-2 fs_xs lh_md text-center mw_946 mb-3 mb-md-5">
@@ -587,17 +588,17 @@
                 <div class="row align-items-center justify-content-center  pt-1">
                     <div class="col-lg-6 col-sm-12 pe-lg-4 d-flex flex-column justify-content-center align-items-center">
                         <div
-                            class="understanding_card gap-3 me-lg-4 d-flex flex-column flex-lg-row align-items-center justify-content-center align-items-lg-start">
-                            <img class="man_img" src="./assets/images/webp/understanding-man-1.webp" alt="man-img" />
-                            <p class="ff_opensans fw-bolder text-center mb-0 text-lg-start italic text-white lh_md fs_xs">
+                            class="understanding_card gap-3  d-flex flex-column flex-lg-row align-items-center justify-content-center align-items-lg-start">
+                            <img class="man_img" src="./assets/images/png/john-invested-img.png" alt="man-img" />
+                            <p class="ff_opensans fw-bolder  mw_357 text-center mb-0 text-lg-start italic text-white lh_md fs_xs">
                                 John invested
                                 <span class="fw-normal style_normal">
                                     $250 without leverage, so his buying power was $250, and he
                                     could potentially earn up to $40.</span>
                             </p>
                         </div>
-                        <div class="accounts_card mx-3 mx-sm-0 me-lg-4">
-<p class="ff_opensans fw-bold font-gradient fs_4md lh_xxl mb-md-3 mb-1 text-center text-md-start">Leveraged Accounts</p>
+                        <div class="accounts_card mx-3 mx-sm-0  mx-md-2 mx-xl-0">
+<p class="ff_opensans fw-bold font-gradient fs_4md lh_xxl mb-md-3 mb-1 text-center text-md-start">Non-Leveraged Accounts</p>
 <div class="d-flex justify-content-between align-items-center mb-10">
 <p class="fw-normal ff_opensans fs_xs gray-4e mb-0 lh_md">John invested</p>
 <p class="fw-bold ff_opensans fs_xs black-45 mb-0 lh_md">$250</p>
@@ -617,8 +618,8 @@
                     <div class="col-lg-6 col-sm-12 ps-lg-4 d-flex flex-column pt-4 pt-lg-0 justify-content-center align-items-center">
                         <div
                             class="understanding_card  gap-3 d-flex flex-column  flex-lg-row align-items-center justify-content-center align-items-lg-start">
-                            <img class="man_img" src="./assets/images/webp/understanding-man-2.webp" alt="man-img" />
-                            <p class="ff_opensans fw-bolder text-center text-lg-start italic text-white lh_md fs_xs">
+                            <img class="man_img" src="./assets/images/png/mike-invested-img.png" alt="man-img" />
+                            <p class="ff_opensans fw-bolder mw_357 text-center text-lg-start italic text-white lh_md fs_xs">
                                 Mike invested
                                 <span class="fw-normal style_normal">
                                     the same amount but utilized leverage of 1 to 30, giving him a
@@ -628,7 +629,7 @@
                             </p>
                         </div>
                         <div class="accounts_card mx-3 mx-sm-0 mx-md-2 mx-xl-0">
-                            <p class="ff_opensans fw-bold font-gradient fs_4md lh_xxl mb-md-3 mb-1 text-center text-md-start">Non - Leveraged Accounts</p>
+                            <p class="ff_opensans fw-bold font-gradient fs_4md lh_xxl mb-md-3 mb-1 text-center text-md-start"> Leveraged Accounts</p>
                             <div class="d-flex justify-content-between align-items-center mb-10">
                             <p class="fw-normal ff_opensans fs_xs gray-4e mb-0 lh_md">Mike invested</p>
                             <p class="fw-bold ff_opensans fs_xs black-45 mb-0 lh_md">$250</p>
@@ -646,10 +647,10 @@
                                                     </div>                    </div>
                 </div>
                 <div class="d-flex flex-column align-items-center pb-xl-5 justify-content-center">
-                    <button class="common_btn fw-bold ff_opensans fs_xs lh_xsm c-black-100">
+                    <button class="main-button fw-bold ff_opensans fs_xs lh_xsm c-black-100">
                         Maximize Your Profit
                     </button>
-                    <p class="gray-b3 mt-2 mb-xl-5 text-center ff_opensans fw-normal fs_xs lh_xsm">
+                    <p class="gray-b3 mt-3 mb-xl-5 text-center ff_opensans fw-normal fs_xs lh_xsm">
                         With Leveraged Accounts and Enhanced Buying Power Today!
                     </p>
                 </div>
