--- a/index.html
+++ b/index.html
@@ -27,15 +27,15 @@
     <meta property="twitter:image" content="https://i.ibb.co/LzLxZsH/127-0-0-1-5500-index3-html.png" />
 </head>
 
-<body class="bg_body overflow_hidden">
+<body class="bg_body overflow_h idden">
     <!-- preloader -->
-    <div id="preloder"
+    <!-- <div id="preloder"
         class="min-vh-100 bg-black d-flex justify-content-center align-items-center  position-fixed top-0 start-0 w-100 z_15">
         <div class="preloder text-white fs_2xl flex-column d-flex">
             <P class="fs_xl ff_opensans fw-bold text-white">Ai-<span class="text_white">Stocks</span></P>
             <div class="ciclre mx-auto"></div>
         </div>
-    </div>
+    </div> -->
     <div class="overflow-x-hidden">
         <!-- header -->
         <header class=" bg-hero-img position-relative mb-xl-100 mb-md-64 mb-45 overflow-x-clip  z-1">
@@ -730,7 +730,7 @@
         <section class="pt_Statistics position-relative z-1">
             <div class="Statistics_ellips2 d-none d-md-block"></div>
             <div class="container mw_1164">
-                <h2 class="text-white ff_opensans fw-bold fs_8xl lh_7xl text-center mb-4 mb-md-5"><span
+                <h2 class="text-white ff_opensans fw-bold fs_8xl lh_7xl text-center mb-sm-4 mb-md-5"><span
                         class="gradient_text">Statistics</span> For Today</h2>
                 <div class="row pt-md-4 pt-3 justify-content-center">
                     <div class="col-md-4 col-sm-6 col-12 d-flex flex-column align-items-center mt-4 mt-md-5">
@@ -740,12 +740,12 @@
                                         data-target="1">1 </span></p>
                             </div>
                         </div>
-                        <p
-                            class="ff_opensans fw-semibold text-white lh_6xl text-center mw_262 fs_6lg mt-2 mt-md-4 pt-1">
+                        <p class="ff_opensans fw-semibold text-white lh_6xl text-center fs_6lg mt-2 mt-md-4 pt-1">
                             Places
                             left
                             to
-                            register</p>
+                            <span class="d-sm-block">register</span>
+                        </p>
                     </div>
                     <div
                         class="col-md-4 col-sm-6 col-12 d-flex flex-column align-items-center mt-1 mt-md-5 mt-md-0 pt-4 pt-md-0">
@@ -755,11 +755,12 @@
                                         data-target="135">1 </span></p>
                             </div>
                         </div>
-                        <p
-                            class="ff_opensans fw-semibold text-white lh_5xl text-center mw_209 fs_6lg mt-2 mt-md-4 pt-1">
+                        <p class="ff_opensans fw-semibold text-white lh_5xl text-center fs_6lg mt-2 mt-md-4 pt-1">
                             Average
                             Registrations
-                            per day</p>
+                            <span class="d-sm-block">
+                                per day</span>
+                        </p>
                     </div>
                     <div
                         class="col-md-4 col-sm-6 col-12 d-flex flex-column align-items-center mt-1 mt-md-5 mt-md-0 pt-4 pt-md-0">
@@ -770,7 +771,7 @@
                             </div>
                         </div>
                         <p
-                            class="ff_opensans fw-semibold text-white lh_6xl text-center mw_327 fs_6lg mt-2 mt-md-4 pt-1">
+                            class="ff_opensans fw-semibold text-white pe-3 pe-lg-4 lh_6xl text-center fs_6lg mt-2 mt-md-4 pt-1">
                             The
                             Average
                             Earnings
@@ -783,7 +784,7 @@
         <section class="py_average position-relative z-1">
             <div class="Statistics_ellips1 d-none d-xl-block"></div>
             <div class="Statistics_ellips3  d-none d-xl-block"></div>
-            <div class=" d-flex flex-lg-row flex-column gap_32">
+            <div class=" d-flex flex-md-row flex-column align-items-center gap-2 gap-md-4 gap_32 pe-3 pe-lg-4 pe-xl-5">
                 <div class="mw_814 overflow-hidden w-100">
                     <div class="d-flex slide_container mb-2">
                         <div class="px_6">
@@ -897,17 +898,15 @@
                         </div>
                     </div>
                 </div>
-                <div class='mw_518 mw_450 mt-3 pt-1 pt-lg-0 mt-lg-0'>
-                    <div class="ps-sm-4 ps-3 ps-xl-3 ps-xxl-0">
-                        <h2 class="ff_opensans fw-bold text-white fs_8xl lh_7xl mb-5">Average Earnings of a
-                            Registered
-                            User From a
-                            <span class="gradient_text">Deposit of $250 to 521$</span>
-                        </h2>
-                        <div class="mt-xl-3">
-                            <button aria-label="registernow"
-                                class="ff_opensans fw-bold text-black fs_xs lh_xsm main-button">Register Now</button>
-                        </div>
+                <div class='mw_518 mw_lg_397 w-100 px-3 px-md-0 mw_300 pt-lg-0 mt-lg-0 mb-md-3 mb-lg-0'>
+                    <h2 class="ff_opensans fw-bold text-md-start text-center text-white fs_8xl lh_7xl mb-4 mb-lg-5">Average Earnings of a
+                        Registered
+                        User From a
+                        <span class="gradient_text">Deposit of $250 to 521$</span>
+                    </h2>
+                    <div class="mt-xl-3 d-flex justify-content-md-start justify-content-center">
+                        <button aria-label="registernow"
+                            class="ff_opensans fw-bold text-black fs_xs lh_xsm main-button">Register Now</button>
                     </div>
                 </div>
 
