--- a/index8.html
+++ b/index8.html
@@ -121,9 +121,9 @@
                 </h2>
                 <p class="ff_opensans fw-normal fs_xs lh_md cd-gray text-center pt-2 pt-sm-3 pt-md-4">In a matter of minutes, one of our AI mentors will contact you, No <br class="d-none d-lg-block"> Experience Required!</p>
                 <div class="row align-items-center pt-2 pt-md-5 mt-3 min_h flex-column-reverse flex-lg-row">
-                    <div class="col-12 col-lg-6 pt-4 pt-lg-0">
+                    <div class="col-12 col-lg-6 pt-4 pt-sm-5 pt-lg-0">
                         <div class="AiStockCard mx-auto">
-                            <h3 class="ff_opensans fw-semibold fs_4md white text-center">Start Trading with AI Stocks !
+                            <h3 class="ff_opensans fw-semibold fs_4md white text-center mb-0">Start Trading with AI Stocks !
                             </h3>
                             <form class="pt-4 mt-sm-2">
                                 <div class="d-sm-flex align-items-center gap-2">
@@ -134,9 +134,9 @@
                                         <p class="mb-0" id="errorLastName"></p>
                                     </div>
                                 </div>
-                                <input id="Email" type="email" placeholder="Email" class="mt-3 ff_opensans fw-normal fs-xs lh_xsm AiStockInput place w-100">
+                                <input id="Email" type="email" placeholder="Email" class="mt-2 ff_opensans fw-normal fs-xs lh_xsm AiStockInput place w-100">
                                 <p class="mb-0" id="errorEmail"></p>
-                                <div class="d-flex align-items-center rounded-1 overflow-hidden mt-3 borderInput">
+                                <div class="d-flex align-items-center rounded-1 overflow-hidden mt-2 borderInput">
                                     <div class="d-flex align-items-center white gap-1 p-3 backdrop">+91
                                         <svg width="8" height="6" viewBox="0 0 8 6" fill="none" xmlns="http://www.w3.org/2000/svg">
                                             <path d="M4 6L0.535898 0H7.4641L4 6Z" fill="#D9D9D9" />
@@ -145,7 +145,7 @@
                                     <input id="Number" type="number" placeholder="Phone Number" class=" bg-gray ff_opensans fw-normal fs-xs lh_xsm place AiStockInputPhone w-100">
                                 </div>
                                 <p class="mb-0" id="errorNumber"></p>
-                                <button aria-label="signups" id="Submit" type="submit" class="mt-32 text-decoration-none w-100 ff_opensans text-black common_btn fw-bold fs_xs lh_xsm">Sign
+                                <button aria-label="signups" id="Submit" type="submit" class="mt-4 text-decoration-none w-100 ff_opensans text-black main-button fw-bold fs_xs lh_xsm">Sign
                                     Up</button>
                             </form>
                         </div>
@@ -239,7 +239,8 @@
                             <a href="#" class="ff_opensans fw-normal fs_xs lh_xxl hoverText cc-gray"> Privacy Policy </a><span>|</span> <a href="#" class="cc-gray hoverText ff_opensans fw-normal fs_xs lh_xxl">Conditions</a>
                         </div>
                         <p class="ff_opensans fw-normal fs_xs lh_xxl cc-gray mb-0 pt-2 pt-sm-0 ">
-                            <span class="d-none d-sm-block"></span> Report Abuse | Copyright@<span id="currentYear"></span>
+                            Report Abuse | Copyright@
+                            <span id="currentYear"></span>
                         </p>
                     </div>
                 </div>
@@ -256,27 +257,12 @@
         </button>
     </div>
     </section>
-    <!-- counter -->
-    <script>
-        const counters = document.querySelectorAll(".counter");
-        counters.forEach((counter) => {
-            counter.innerText = "0";
-            const updateCounter = () => {
-                const target = +counter.getAttribute("data-target");
-                const count = +counter.innerText;
-                const increment = target / 200;
-                if (count < target) {
-                    counter.innerText = Math.ceil(count + increment);
-                    setTimeout(updateCounter, 1);
-                } else counter.innerText = target;
-            };
-            updateCounter();
-        });
-    </script>
+
     <!--======================botstrap-link=========================-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
     </script>
-    <script src="./assets/js/app.js"></script>
+    <script src="./assets/js/app8.js"></script>
+
 
 </body>
 
