--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
 
 <body class="bg_body overflow_h idden">
     <!-- preloader -->
-    <!-- <div id="preloder"
+    <div id="preloder"
         class="min-vh-100 bg-black d-flex justify-content-center align-items-center  position-fixed top-0 start-0 w-100 z_15">
         <div class="preloder text-white fs_2xl flex-column d-flex">
             <P class="fs_xl ff_opensans fw-bold text-white">Ai-<span class="text_white">Stocks</span></P>
             <div class="ciclre mx-auto"></div>
         </div>
-    </div> -->
+    </div>
     <div class="overflow-x-hidden">
         <!-- header -->
         <header class=" bg-hero-img position-relative mb-xl-100 mb-md-64 mb-45 overflow-x-clip  z-1">
@@ -724,7 +724,7 @@
         <section class="pt_Statistics position-relative z-1">
             <div class="Statistics_ellips2 d-none d-md-block"></div>
             <div class="container mw_1164">
-                <h2 class="text-white ff_opensans fw-bold fs_8xl lh_7xl text-center mb-sm-4 mb-md-5"><span
+                <h2 class="text-white ff_opensans fw-bold fs_8xl lh_7xl text-center mb-sm-4 mb-lg-5"><span
                         class="gradient_text">Statistics</span> For Today</h2>
                 <div class="row pt-md-4 pt-3 justify-content-center">
                     <div class="col-md-4 col-sm-6 col-12 d-flex flex-column align-items-center mt-4 mt-md-5">
@@ -778,7 +778,7 @@
         <section class="py_average position-relative z-1">
             <div class="Statistics_ellips1 d-none d-xl-block"></div>
             <div class="Statistics_ellips3  d-none d-xl-block"></div>
-            <div class=" d-flex flex-md-row flex-column align-items-center gap_10 gap_32 gap_24 pe-3 pe-lg-4 pe-xl-5">
+            <div class=" d-flex flex-md-row flex-column align-items-center average_gap  pe-3 pe-lg-4 pe-xl-5">
                 <div class="mw_814 overflow-hidden w-100">
                     <div class="d-flex slide_container mb-2">
                         <div class="px_6">
@@ -1013,7 +1013,7 @@
             </div>
         </section>
     <!--------------------------------------------------- benifit-section --------------------------------------------------->
-    <div class="position-relative pt-md-4">
+    <div class="position-relative pt-3">
         <span class="ellipse_1 position-absolute"></span>
         <span class="ellipse_2 position-absolute"></span>
         <span class="ellipse_3 position-absolute"></span>
