--- a/index.html
+++ b/index.html
@@ -651,7 +651,7 @@
                         </div>
                         <div class="accounts_card mx-3 mx-sm-0  mx-md-2 mx-xl-0">
                             <p class="ff_opensans fw-bold font-gradient fs_4md lh_xxl mb-md-3 mb-1 text-center text-md-start">
-                                Non-Leveraged Accounts</p>
+                                Non - Leveraged Accounts</p>
                             <div class="d-flex justify-content-between align-items-center mb-10">
                                 <p class="fw-normal ff_opensans fs_xs gray-4e mb-0 lh_md">John invested</p>
                                 <p class="fw-bold ff_opensans fs_xs black-45 mb-0 lh_md">$250</p>
@@ -665,7 +665,7 @@
                                 <p class="fw-bold ff_opensans fs_xs black-45 mb-0 lh_md">$250</p>
                             </div>
                             <img class="w-100 mb-4" src="./assets/images/webp/trade-1.webp" alt="trade-img">
-                            <div class="d-flex align-items-center italic trade_btn ">
+                            <div class="d-flex align-items-center italic trade_btn gap-1">
                                 <p class="green-2d  bg-white ff_opensans fw-bold fs_lg lh_4xl mb-0">$40</p>
                                 <p class="green-2d  bg-white ff_opensans  mb-0 fw-semibold lh_xsm fs_sm">Potential
                                     Earnings</p>
@@ -689,7 +689,7 @@
                         <div class="accounts_card mx-3 mx-sm-0 mx-md-2 mx-xl-0">
                             <p class="ff_opensans fw-bold font-gradient fs_4md lh_xxl mb-md-3 mb-1 text-center text-md-start">
                                 Leveraged Accounts</p>
-                            <div class="d-flex justify-content-between align-items-center mb-10">
+                            <div class="d-flex justify-content-between align-items-center mb-10 gap-1">
                                 <p class="fw-normal ff_opensans fs_xs gray-4e mb-0 lh_md">Mike invested</p>
                                 <p class="fw-bold ff_opensans fs_xs black-45 mb-0 lh_md">$250</p>
                             </div>
@@ -702,7 +702,7 @@
                                 <p class="fw-bold ff_opensans fs_xs black-45 mb-0 lh_md">$7500</p>
                             </div>
                             <img class="w-100 mb-4" src="./assets/images/webp/trade-2.webp" alt="trade-img">
-                            <div class="d-flex align-items-center italic trade_btn ">
+                            <div class="d-flex align-items-center italic trade_btn gap-1 ">
                                 <p class="green-2d  bg-white ff_opensans fw-bold fs_lg lh_4xl mb-0">$1200</p>
                                 <p class="green-2d  bg-white ff_opensans  mb-0 fw-semibold lh_xsm fs_sm">Mike achieved
                                     returns</p>
