--- a/index.html
+++ b/index.html
@@ -623,7 +623,7 @@
         </div>
         <!--------------------------------------------------- uderstanding-section --------------------------------------------------->
         <div class=" pt-md-5 mt_10">
-            <div class="container mw_1200 py-lg-5 mt-1">
+            <div class="container mw_1200 pt-lg-5 mt-1">
                 <h1 class="mw_94  pt-4 ff_opensans  fw-bold lh_7xl mb-3 fs_8xl text-white text-center mx-auto">
                     Understanding <span class="font-gradient">Leveraged</span> Accounts
                     <br class="d-none d-md-block" />
@@ -710,7 +710,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="d-flex flex-column align-items-center pb-xl-5 justify-content-center">
+                <div class="d-flex flex-column align-items-center justify-content-center">
                     <button class="main-button fw-bold ff_opensans fs_xs lh_xsm c-black-100">
                         Maximize Your Profit
                     </button>
